--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.footbapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,8 +13,10 @@
         android:roundIcon="@drawable/ic_soccer_ball"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".activities.EventListActivity"></activity>
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m"
+        android:fullBackupContent="@xml/backup_descriptor">
+        <activity android:name=".activities.EventListActivity" />
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name">
